Intl owner stores and fix subaccounts list

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -742,5 +742,23 @@
   "categories.description": "Descripción",
   "categories.addCategory": "Agrear categoría",
   "categories.addDiscount": "Agregar descuento",
-  "categories.save": "Guardar"
+  "categories.save": "Guardar",
+  "stores.changePassword": "Cambiar contraseña",
+  "stores.changeAmount": "Cambiar cantidades",
+  "stores.type": "Tipo",
+  "stores.dailyPermission": "Permiso diario",
+  "subaccounts.noId": "No hay id de cuenta",
+  "subaccounts.alertTitle": "Ups!",
+  "subaccounts.alertMessage": "Esta cuenta no tiene subcuentas",
+  "stores.refunded": "REEMBOLSADO",
+  "stores.discounted": "DESCONTADO",
+  "stores.balance": "Balance",
+  "stores.initialCredit": "Credito inicial",
+  "stores.readyToAccess": "Disponible para solicitar credito",
+  "stores.discountsAndRewards": "Descuentos & Recompensas",
+  "stores.discountPercentage": "% de Descuento",
+  "stores.editProfile": "Editar cuenta",
+  "stores.changeInitialCredit": "Cambiar crédito inicial",
+  "stores.manageSubaccounts": "Manejar subcuentas",
+  "stores.allocateCredit": "Asignar crédito preacordado"
 }
