Intl local login banner

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -740,6 +740,9 @@
   "bCategories.save": "Guardar",
   "bCategories.cancel": "Cancelar",
   "localLogin.resume": "Reanudar sesión",
+  "localLogin.unlock": "Desbloquear",
+  "localLogin.keysEncryptedTitle": "Sus calves están encriptadas",
+  "localLogin.keysEncryptedMessage": "Por favor, introduzca su contraseña de sesión local para desbloquearlas",
   "categories.description": "Descripción",
   "categories.addCategory": "Agrear categoría",
   "categories.addDiscount": "Agregar descuento",
