--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -686,7 +686,7 @@
   "kpis.reservedFounds": " Fondos de reserva",
   "kpis.circulation": "Cantidad de Discoun en circulación",
   "kpis.dailyIssuing": "Uso diario",
-  "kpis.airdrop": "Airdop utilizado",
+  "kpis.airdrop": "Airdrop utilizado",
   "kpis.airdroped": "{currency} en airdrop",
   "kpis.amountRefered": "{amount} por Referidos",
   "kpis.amountRefund": "{amount} por Reembolsos",
@@ -704,18 +704,20 @@
   "parameters.lightGreen": "Luz verde",
   "parameters.lightYellow": "Luz amarilla",
   "parameters.lightRed": "Luz roja",
+  "parameters.discoins_issued_perc": "Porcentaje de D$C emitidos",
   "parameters.from": "Desde",
   "parameters.to": "Hasta",
-  "parameters.extra": "% extra",
+  "parameters.extra": "% penalización",
   "parameters.airdrop": "Airdrop",
-  "parameters.referalSystem": "Sistema de referidos",
+  "parameters.referalSystem": "Programa de referidos",
   "parameters.referredMax": "Cuantas veces puede referir un usuario?",
   "parameters.referrerAmount": "Recompensa al que refiere",
   "parameters.referredAmount": "Recompensa al referido",
+  "parameters.referalSystemDisabled": "El programa de referidos se encuentra momentáneamente no disponible.",
   "parameters.firstWallets": "Primeras wallets",
   "parameters.firstWalletDownload": "Cantidad de descargas con premio",
   "parameters.downloadReward": "Recompensa por descarga",
-  "parameters.firstTxReward": "Recompensa en primer Tx",
+  "parameters.firstTxReward": "Recompensa en prreferimer Tx",
   "parameters.reimbursement": "Reembloso escalonado por transacción",
   "parameters.reimbursementFirst": "Primer escalón",
   "parameters.reimbursementSecond": "Segundo escalón",
@@ -724,7 +726,8 @@
   "parameters.reimbursementToTx": "Hasta transacción",
   "parameters.reimbursementPercentRefunded": "Reintegro porcentual a comercio y usuario",
   "parameters.reserveFund": "Fondo de Reserva",
-  "parameters.newBusiness": "Porcentaje de cada CI a nuevo negocio",
+  "parameters.newCIPerc": "Porcentaje de CI en alta de comercio",
+  "parameters.newCIPercHint": "Este porcentaje se guarda en el fondo de reserva de la cuenta Admin, y el mismo monto se reparte entre los comercios ya adheridos de manera proporcional a sus CI.",
   "parameters.apply": "Aplicar cambios",
   "bCategories.addNew": "Agregar nueva",
   "bCategories.name": "Nombre",
@@ -742,7 +745,7 @@
   "bCategories.cancel": "Cancelar",
   "localLogin.resume": "Reanudar sesión",
   "localLogin.unlock": "Desbloquear",
-  "localLogin.keysEncryptedTitle": "Sus calves están encriptadas",
+  "localLogin.keysEncryptedTitle": "Sus claves están encriptadas",
   "localLogin.keysEncryptedMessage": "Por favor, introduzca su contraseña de sesión local para desbloquearlas",
   "categories.description": "Descripción",
   "categories.addCategory": "Agrear categoría",
