Balance perc. link to percentage, profile updated, parameteres updated.

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -619,6 +619,7 @@
   "refund.amount": "Cantidad",
   "refund.percentage": "Porcentaje",
   "refund.invoice": "Factura",
+  "profile.profile_info": "Información de perfil",
   "profile.name": "Nombre",
   "profile.email": "Correo electrónico",
   "profile.telephone": "Teléfono",
@@ -630,7 +631,7 @@
   "profile.pleaseSelect": "Seleccione una",
   "profile.location": "Ubicación",
   "profile.image": "Imágen",
-  "profile.rates": "Porcentajes",
+  "profile.rates_extended": "Porcentaje de descuento aceptado y recompensa entregada por días",
   "profile.saveStore": "Guardar cambios",
   "profile.reward": "Reembolso",
   "profile.discount": "Descuento",
@@ -642,7 +643,7 @@
   "profile.day-fri": "Vie",
   "profile.day-sat": "Sab",
   "profile.day-sun": "Dom",
-  "profile.edit": "Editar tienda",
+  "profile.edit": "Editar perfil de comercio",
   "profile.minimumDiscount": "(Descuento mínimo: {discount})",
   "subaccounts.empty": "Todavía no hay ninguna subcuenta asociada.",
   "subaccounts.addSubaccount": "Agregar subcuenta",
