Intl sotres filters

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -597,7 +597,15 @@
   "filter.storeName": "Nombre de tienda",
   "filter.category": "Categoría",
   "filter.subcategory": "Subcategoría",
-  "filter.overdraft": "Tiene descubierto",
+  "filter.overdraft": "Descubierto",
+  "filter.paymentMethods": "Formas de pago",
+  "filter.none": "Ninguno",
+  "filter.credited": "Acreditado",
+  "filter.noCredit": "Sin crédito",
+  "filter.overdraftSend": "Solicitud enviada",
+  "filter.creditCard": "Tarjeta de crédito",
+  "filter.debitCard": "Tarjeta de Débito",
+  "filter.cash": "Efectivo",
   "intlselector": "Cambiar idioma",
   "dashboard.overdraftQuestion": "Tienes un crédito de {symbol}{value}. ¿Quieres aceptarlo?",
   "apply": "Aplicar",
