i18n, post signature improvements.

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -569,7 +569,7 @@
   "sidebar.findAccount": "Buscar Cuenta",
   "sidebar.contactList": "Lista de contactos",
   "sidebar.profile": "Perfil",
-  "register.bussines": "Registar comercio",
+  "register.bussines": "Registrarse",
   "register.name": "Nombre",
   "register.name.empty": "El nombre es requerido",
   "register.account_name": "Nombre de cuenta",
