Add main and control panel to bussines menu

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -616,5 +616,7 @@
   "refund.percentage": "Percentage",
   "refund.invoice": "Invoice",
   "profile.minimumDiscount": "(Minimum Discount: {discount})",
-  "stores.notFound": "No business found"
+  "stores.notFound": "No business found",
+  "sidebar.panelControl": "Control Panel",
+  "sidebar.main": "Home"
 }
