--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -778,5 +778,7 @@
   "stores.changeInitialCredit": "Cambiar crédito inicial",
   "stores.manageSubaccounts": "Manejar subcuentas",
   "stores.allocateCredit": "Asignar crédito preacordado",
-  "stores.notFound": "No se encontraron tiendas en el sistema"
+  "stores.notFound": "No se encontraron tiendas en el sistema",
+  "sidebar.panelControl": "Panel de Control",
+  "sidebar.main": "Inicio"
 }
