Cobrar instead of Reembolsos

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -564,6 +564,7 @@
   "topbar.totalPrice": "Precio total",
   "sidebar.discountRewards": "Configuración de descuentos",
   "sidebar.refound": "Reembolsos",
+  "sidebar.charge": "Cobrar",
   "sidebar.transactions": "Transacciones",
   "sidebar.subAccounts": "Subcuentas",
   "sidebar.findAccount": "Buscar Cuenta",
