Translations. Discount Rate fixed on dashboard and added reward rate.

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -608,6 +608,8 @@
   "filter.debitCard": "Tarjeta de Débito",
   "filter.cash": "Efectivo",
   "intlselector": "Cambiar idioma",
+  "dashboard.todayDiscount":"Descuento de hoy",
+  "dashboard.todayReward":"Recompensa de hoy",
   "dashboard.overdraftQuestion": "Tienes un crédito de {symbol}{value}. ¿Quieres aceptarlo?",
   "apply": "Aplicar",
   "ignore": "Ignorar",
@@ -617,6 +619,7 @@
   "dashboard.endorsed": "Aprobado",
   "dashboard.acceptedRatio": "Relación aceptado/recibido",
   "dashboard.rewardAndRefund": "Recompensa y reembolso",
+  "dashboard.rewardAndDiscount": "Recompensa y descuento",
   "dashboard.overdraftAvailable": "Crédito disponible",
   "dashboard.acceptAvailableOverdraft": "¿Desea aceptar el crédito disponible?",
   "refund.forceSearch": "Forzar búsqueda",
