Locale changes. Feature: do not pre search on select customer for rewarding.

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -792,5 +792,9 @@
   "mainBusiness.acceptPayment": "Aceptar pago con descuento en {currency}",
   "businessMain.transactions" :"Listado de transacciones",
   "mainBusiness.reward" : "Recompensar",
-  "mainBusiness.discount" : "Aceptar descuento"
+  "mainBusiness.discount" : "Aceptar descuento",
+  "bussinesMain.memo" : "Memo",
+  "confirmRefund.from" : "De",
+  "confirmRefund.to" : "A",
+  "confirmRefund.date" : "Fecha"
 }
