Add logo and avatar uplodaer
Remove dropzone

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -608,8 +608,8 @@
   "filter.debitCard": "Tarjeta de Débito",
   "filter.cash": "Efectivo",
   "intlselector": "Cambiar idioma",
-  "dashboard.todayDiscount":"Descuento de hoy",
-  "dashboard.todayReward":"Recompensa de hoy",
+  "dashboard.todayDiscount": "Descuento de hoy",
+  "dashboard.todayReward": "Recompensa de hoy",
   "dashboard.overdraftQuestion": "Tienes un crédito de {symbol}{value}. ¿Quieres aceptarlo?",
   "apply": "Aplicar",
   "ignore": "Ignorar",
@@ -643,6 +643,9 @@
   "profile.pleaseSelect": "Seleccione una",
   "profile.location": "Ubicación",
   "profile.image": "Imágen",
+  "profile.avatar": "Avatar",
+  "profile.logo": "Logo",
+  "profile.upload": "Seleccionar",
   "profile.rates_extended": "Porcentaje de descuento aceptado y recompensa entregada por días",
   "profile.saveStore": "Guardar cambios",
   "profile.reward": "Reembolso",
@@ -788,13 +791,13 @@
   "bussinesMain.rewardAndRefund": "Aceptar pagos en {currency} y dar recompensas",
   "bussinesMain.billAmount": "Monto total de factura",
   "bussinesMain.billReference": "Referencia, ticket, nro. de factura",
-  "mainBusiness.sendReward" : "Recompensar cliente",
+  "mainBusiness.sendReward": "Recompensar cliente",
   "mainBusiness.acceptPayment": "Aceptar pago con descuento en {currency}",
-  "businessMain.transactions" :"Listado de transacciones",
-  "mainBusiness.reward" : "Recompensar",
-  "mainBusiness.discount" : "Aceptar descuento",
-  "bussinesMain.memo" : "Memo",
-  "confirmRefund.from" : "De",
-  "confirmRefund.to" : "A",
-  "confirmRefund.date" : "Fecha"
+  "businessMain.transactions": "Listado de transacciones",
+  "mainBusiness.reward": "Recompensar",
+  "mainBusiness.discount": "Aceptar descuento",
+  "bussinesMain.memo": "Memo",
+  "confirmRefund.from": "De",
+  "confirmRefund.to": "A",
+  "confirmRefund.date": "Fecha"
 }
