Add more info in qr box

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -661,10 +661,10 @@
   "profile.edit": "Editar perfil de comercio",
   "profile.minimumDiscount": "(Descuento mínimo: {discount})",
   "profile.paymentMethods": "Métodos de pago aceptados",
-  "profile.payments.cash" : "Efectivo",
-  "profile.payments.debit" : "Débito",
-  "profile.payments.credit" : "Crédito",
-  "profile.payments.mercadopago" : "Mercado Pago",
+  "profile.payments.cash": "Efectivo",
+  "profile.payments.debit": "Débito",
+  "profile.payments.credit": "Crédito",
+  "profile.payments.mercadopago": "Mercado Pago",
   "subaccounts.empty": "Todavía no hay ninguna subcuenta asociada.",
   "subaccounts.addSubaccount": "Agregar subcuenta",
   "subaccounts.emptySearch": "No se encontraron usuarios con su búsqueda.",
@@ -806,12 +806,15 @@
   "confirmRefund.to": "A",
   "confirmRefund.date": "Fecha",
   "configSchedule.title": "Configuración de descuentos/recompensas y métodos de pago",
-  "configSchedule.monday" : "lunes",
-  "configSchedule.tuesday" : "martes",
-  "configSchedule.wednesday" : "miércoles",
-  "configSchedule.thursday" : "jueves",
-  "configSchedule.friday" : "viernes",
-  "configSchedule.saturday" : "sábado",
-  "configSchedule.sunday" : "domingo",
-  "configSchedule.minimumDiscount" : "Descuento mínimo de: {minimumDiscount}%"
+  "configSchedule.monday": "lunes",
+  "configSchedule.tuesday": "martes",
+  "configSchedule.wednesday": "miércoles",
+  "configSchedule.thursday": "jueves",
+  "configSchedule.friday": "viernes",
+  "configSchedule.saturday": "sábado",
+  "configSchedule.sunday": "domingo",
+  "configSchedule.minimumDiscount": "Descuento mínimo de: {minimumDiscount}%",
+  "qr.total": "Total a cobrar",
+  "qr.totalCoins": "Total en {currency}",
+  "qr.ticket": "Ticket/N° de factura:"
 }
