Fixes on business profile edit

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -642,7 +642,7 @@
   "profile.subcategory": "Subcategoría",
   "profile.pleaseSelect": "Seleccione una",
   "profile.location": "Ubicación",
-  "profile.image": "Imágen",
+  "profile.image": "Imagen promocional",
   "profile.avatar": "Avatar",
   "profile.logo": "Logo",
   "profile.upload": "Seleccionar",
