Added Discoin logo. Discount and Rewards functional.

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -562,7 +562,7 @@
   "topbar.viewAll": "Ver todo",
   "topbar.viewCart": "Ver carro",
   "topbar.totalPrice": "Precio total",
-  "sidebar.discountRewards": "Config. promos",
+  "sidebar.discountRewards": "Promos",
   "sidebar.refound": "Reembolsos",
   "sidebar.charge": "Cobrar",
   "sidebar.transactions": "Transacciones",
