New: TXs from biz and subaccounts. New: Txs cards restyled.

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -694,8 +694,11 @@
   "transactions.filter": "Filtrar",
   "transactions.from": "De",
   "transactions.to": "A",
-  "transactions.refund": "Reintegro",
-  "transactions.amountInvoiced": "Monto facturado",
+  "transactions.rate": "Porcentaje",
+  "transactions.refund": "Recompensa",
+  "transactions.discount": "Descuento",
+  "transactions.tx": "Transferencia",
+  "transactions.amountInvoiced": "Total",
   "transactions.invoice": "Factura",
   "transactions.date": "Fecha",
   "transactions.review": "Reseña",
