--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -2,7 +2,7 @@
   "sidebar.home": "Inicio",
   "sidebar.email": "Email",
   "sidebar.ecommerce": "Ecommerce",
-  "sidebar.shop": "tienda",
+  "sidebar.shop": "Comercio",
   "sidebar.cart": "Carro",
   "sidebar.checkout": "revisa",
   "sidebar.cards": "Divertido Tarjetas",
@@ -549,14 +549,14 @@
   "sidebar.configuration": "Configuración",
   "sidebar.parameters": "Parametros",
   "sidebar.categories": "Categorías",
-  "sidebar.stores": "Tiendas",
-  "sidebar.list": "Tiendas",
-  "sidebar.createStore": "Crear tienda",
+  "sidebar.stores": "Comercios",
+  "sidebar.list": "Comercios",
+  "sidebar.createStore": "Crear Comercio",
   "sidebar.notifications": "Notificaciones",
   "sidebar.blockchain": "Blockchain",
   "sidebar.balance": "Balances",
   "sidebar.accounts": "Cuentas",
-  "sidebar.businessCategories": "Categorías de tiendas",
+  "sidebar.businessCategories": "Categorías",
   "topbar.help": "Ayuda",
   "topbar.logout": "Cerrar sesión",
   "topbar.viewAll": "Ver todo",
@@ -571,9 +571,9 @@
   "sidebar.contactList": "Lista de contactos",
   "sidebar.profile": "Perfil",
   "register.bussines": "Registrarse",
-  "register.name": "Nombre",
+  "register.name": "Comercio",
   "register.name.empty": "El nombre es requerido",
-  "register.account_name": "Nombre de cuenta",
+  "register.account_name": "Usuario",
   "register.account_name.empty": "El nombre de la cuenta es requerido",
   "register.account_already_exists": "Nombre ya registrado",
   "register.telephone": "Teléfono",
@@ -595,7 +595,7 @@
   "register.wip": "Clave privada (wip)",
   "register.brainKeyCopy": "He resguardado esta llave mnemonica",
   "register.brainKeyMessage": "Las palabras han sido copiadas al portapapeles. Resguárdelas de manera segura!",
-  "filter.storeName": "Nombre de tienda",
+  "filter.storeName": "Nombre de Comercio",
   "filter.category": "Categoría",
   "filter.subcategory": "Subcategoría",
   "filter.overdraft": "Descubierto",
@@ -793,7 +793,7 @@
   "stores.changeInitialCredit": "Cambiar crédito inicial",
   "stores.manageSubaccounts": "Manejar subcuentas",
   "stores.allocateCredit": "Asignar crédito preacordado",
-  "stores.notFound": "No se encontraron tiendas en el sistema",
+  "stores.notFound": "No se encontraron comercios en el sistema",
   "sidebar.panelControl": "Panel de Control",
   "sidebar.main": "Inicio",
   "bussinesMain.rewardAndRefund": "Aceptar pagos en {currency} y dar recompensas",
