New: versioning at config.js. New: translation to english.

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -31,6 +31,7 @@
   "sidebar.checkbox": "Checkbox",
   "sidebar.radiobox": "Radiobox",
   "sidebar.transfer": "Transfer",
+  "sidebar.charge": "Charge",
   "sidebar.autocomplete": "AutoComplete",
   "sidebar.boxOptions": "Box Options",
   "sidebar.uiElements": "UI Elements",
@@ -564,7 +565,7 @@
   "topbar.totalPrice": "Total Price",
   "store.edit": "Edit Store",
   "store.name": "Name",
-  "sidebar.discountRewards": "Discounts configuration",
+  "sidebar.discountRewards": "Discounts config",
   "sidebar.refound": "Refunds",
   "sidebar.transactions": "Transactions",
   "sidebar.subAccounts": "Sub Accounts",
@@ -600,9 +601,11 @@
   "intlselector": "Change language",
   "dashboard.dashboard": "Dashboard",
   "dashboard.balance": "{currency} Balance",
-  "dashboard.initialCredit": "Inicil Cretid",
+  "dashboard.initialCredit": "Initial Credit",
   "dashboard.endorsed": "Endorsed",
   "dashboard.acceptedRatio": "Accepted / Received ratio",
+  "dashboard.todayDiscount" : "Today discount %",
+  "dashboard.todayReward" : "Today reward %",
   "dashboard.rewardAndRefund": "Reward & Refund",
   "dashboard.overdraftAvailable": "Credit available",
   "dashboard.acceptAvailableOverdraft": "Do you wish to accept the available overdraft?",
@@ -617,6 +620,49 @@
   "refund.invoice": "Invoice",
   "profile.minimumDiscount": "(Minimum Discount: {discount})",
   "stores.notFound": "No business found",
-  "sidebar.panelControl": "Control Panel",
-  "sidebar.main": "Home"
+  "sidebar.panelControl": "Dashboard",
+  "sidebar.main": "Home",
+  "kpis.amountRefered": "{amount} issued by referrals",
+  "core.sessionPasswordWarning" : "You must enter a session PIN",
+  "core.sessionPassword": "Session PIN",
+  "localLogin.keysEncryptedMessage" : "Please enter your PIN to unlock session",
+  "input.typeAndPressEnter" : "Press enter to init search...",
+
+  "transactions.type" : "TX Type",
+  "transactions.loading": "Loading TXs",
+  "transactions.notFound": "No TX found",
+  "transactions.filter": "Filter",
+  "transactions.from": "From",
+  "transactions.to": "To",
+  "transactions.rate": "Percentage",
+  "transactions.refund": "Reward",
+  "transactions.discount": "Discount",
+  "transactions.tx": "Transfer",
+  "transactions.transfer": "Transfer",
+  "transactions.amountInvoiced": "Total",
+  "transactions.invoice": "Bill",
+  "transactions.date": "Date",
+  "transactions.review": "Review",
+  "profile.paymentMethods": "Accepted payment methods",
+  "profile.payments.cash": "Cash",
+  "profile.payments.debit": "Debit Card",
+  "profile.payments.credit": "Credit card",
+  "profile.payments.mercadopago": "Mercado Pago",
+
+  "configSchedule.title": "Discounts & rewards and payment methods configuration",
+  "configSchedule.monday": "Monday",
+  "configSchedule.tuesday": "Tuesday",
+  "configSchedule.wednesday": "Wednesday",
+  "configSchedule.thursday": "Thursday",
+  "configSchedule.friday": "Friday",
+  "configSchedule.saturday": "Saturday",
+  "configSchedule.sunday": "Sunday",
+  "configSchedule.minimumDiscount": "Minimum discount by category: {minimumDiscount}%",
+
+  "profile.image": "Promotional image",
+  "profile.image_hint": "4:3 aspect ratio",
+  "profile.avatar": "Avatar",
+  "profile.avatar_hint": "1:1 aspect ratio",
+  "profile.logo": "Logo",
+  "profile.logo_hint": "1:1 aspect ratio"
 }
