--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -643,8 +643,11 @@
   "profile.pleaseSelect": "Seleccione una",
   "profile.location": "Ubicación",
   "profile.image": "Imagen promocional",
+  "profile.image_hint": "4:3 aspect ratio",
   "profile.avatar": "Avatar",
+  "profile.avatar_hint": "1:1 aspect ratio",
   "profile.logo": "Logo",
+  "profile.logo_hint": "1:1 aspect ratio",
   "profile.upload": "Seleccionar",
   "profile.rates_extended": "Porcentaje de descuento aceptado y recompensa entregada por días",
   "profile.saveStore": "Guardar cambios",
@@ -693,6 +696,7 @@
   "subaccounts.changeAmount": "Cambiar límite diario",
   "subaccounts.withdrawn": "Retirado en este período",
   "subaccounts.allocateCredit": "Allocate pre-arranged credit",
+  "transactions.type" : "Tipo",
   "transactions.loading": "Cargando transacciones",
   "transactions.notFound": "No se encontraron transacciones.",
   "transactions.filter": "Filtrar",
@@ -708,9 +712,9 @@
   "transactions.date": "Fecha",
   "transactions.review": "Reseña",
   "core.username": "Usuario",
-  "core.password": "Contraseña",
-  "core.sessionPassword": "Contraseña de sesión",
-  "core.sessionPasswordWarning": "Debe ingresar una contraseña de sesión",
+  "core.password": "Contraseña o mnemotécnicas",
+  "core.sessionPassword": "PIN de sesión",
+  "core.sessionPasswordWarning": "Debe ingresar un PIN de sesión",
   "kpis.adminBalance": "Balance del admin",
   "kpis.reservedFounds": " Fondos de reserva",
   "kpis.circulation": "Cantidad de Discoins en circulación",
@@ -775,7 +779,7 @@
   "localLogin.resume": "Reanudar sesión",
   "localLogin.unlock": "Desbloquear",
   "localLogin.keysEncryptedTitle": "Sus claves están encriptadas",
-  "localLogin.keysEncryptedMessage": "Por favor, introduzca su contraseña de sesión local para desbloquearlas",
+  "localLogin.keysEncryptedMessage": "Por favor, introduzca su PIN de sesión local para desbloquearlas",
   "categories.description": "Descripción",
   "categories.addCategory": "Agrear categoría",
   "categories.addDiscount": "Agregar descuento",
@@ -830,5 +834,6 @@
   "connectionStatus.times": "Sin conexión, intentos fallidos: {times}",
   "connectionStatus.fail": "Error en la conexión, intentamos {times} veces. {newLine} Prueba nuevamente luego de comprobar tu conexión a internet",
   "connectionStatus.retry": "Intentar de nuevo",
-  "qr.discount": "Descuento"
+  "qr.discount": "Descuento",
+  "input.typeAndPressEnter" : "Presione enter para iniciar búsqueda..."
 }
