--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -696,7 +696,7 @@
   "subaccounts.changeAmount": "Cambiar límite diario",
   "subaccounts.withdrawn": "Retirado en este período",
   "subaccounts.allocateCredit": "Allocate pre-arranged credit",
-  "transactions.type" : "Tipo",
+  "transactions.type": "Tipo",
   "transactions.loading": "Cargando transacciones",
   "transactions.notFound": "No se encontraron transacciones.",
   "transactions.filter": "Filtrar",
@@ -831,9 +831,11 @@
   "qr.total": "Total a cobrar",
   "qr.totalCoins": "Total en {currency}",
   "qr.ticket": "Ticket/N° de factura:",
+  "qr.lessAmountTitle": "Pago parcial",
+  "qr.lessAmountDescription": "El usuario {user} envió {currency}{received} en lugar de los {currency}{expected} esperados. Debe completar el pago con {fiat}{extra}.",
   "connectionStatus.times": "Sin conexión, intentos fallidos: {times}",
   "connectionStatus.fail": "Error en la conexión, intentamos {times} veces. {newLine} Prueba nuevamente luego de comprobar tu conexión a internet",
   "connectionStatus.retry": "Intentar de nuevo",
   "qr.discount": "Descuento",
-  "input.typeAndPressEnter" : "Presione enter para iniciar búsqueda..."
+  "input.typeAndPressEnter": "Presione enter para iniciar búsqueda..."
 }
