Show session modal after submitting the registration form

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -715,6 +715,7 @@
   "core.password": "Contraseña o mnemotécnicas",
   "core.sessionPassword": "PIN de sesión",
   "core.sessionPasswordWarning": "Debe ingresar un PIN de sesión",
+  "core.sessionPasswordInfo": "Puedes guardar los datos de tu cuenta en el navegador para acceder más fácilmente. Para ellos necesitamos una contraseña de sesión. Ten en cuenta que esta contraseña no reemplazará nunca a la creada en el registro.",
   "kpis.adminBalance": "Balance del admin",
   "kpis.reservedFounds": " Fondos de reserva",
   "kpis.circulation": "Cantidad de Discoins en circulación",
@@ -813,7 +814,7 @@
   "mainBusiness.sendReward": "Recompensar cliente",
   "mainBusiness.acceptPayment": "Aceptar pago con descuento en {currency}",
   "businessMain.transactions": "Listado de transacciones",
-  "businessMain.billTotalAmount":   "Monto de la factura",
+  "businessMain.billTotalAmount": "Monto de la factura",
   "mainBusiness.reward": "Recompensar",
   "mainBusiness.discount": "Aceptar descuento",
   "bussinesMain.memo": "Memo",
