Add today totals in dashboard

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -625,6 +625,8 @@
   "refund.forceSearch": "Forzar búsqueda",
   "refund.searchCustomer": "Buscar cliente",
   "refund.refound": "Recompensar",
+  "refund.refound.today": "Recompensas de hoy",
+  "refund.totalAccepted": "Total de {currency} aceptados",
   "refund.acceptDiscount": "Aceptar descuento",
   "refund.customers": "Clientes",
   "refund.refoundTo": "Recompensar a {name}",
@@ -806,6 +808,8 @@
   "sidebar.panelControl": "Panel de Control",
   "sidebar.main": "Inicio",
   "discounts": "Descuentos",
+  "discounts.today": "Descuentos de hoy",
+  "discounts.totalInvoiced": "Total facturado",
   "discountsSent": "{currency} enviados",
   "bussinesMain.rewardAndRefund": "Aceptar pagos en {currency} y dar recompensas",
   "bussinesMain.billAmount": "Monto total de factura",
@@ -813,7 +817,7 @@
   "mainBusiness.sendReward": "Recompensar cliente",
   "mainBusiness.acceptPayment": "Aceptar pago con descuento en {currency}",
   "businessMain.transactions": "Listado de transacciones",
-  "businessMain.billTotalAmount":   "Monto de la factura",
+  "businessMain.billTotalAmount": "Monto de la factura",
   "mainBusiness.reward": "Recompensar",
   "mainBusiness.discount": "Aceptar descuento",
   "bussinesMain.memo": "Memo",
